fix(calendar): allow searching for room in google calendar
Google and Outlook truncate room list results to 100. If
a company has more than 100 rooms then not all rooms will
be returned. The Google API allows for querying for rooms,
which provides some search functionality, so that has been
introduced to get around the 100 room limit. Outlook does
not seem to provide such so it's going to have to survive
for a bit in its current state.

Note that this is a partial solution until the real
backend service is complete. Google's API querying matches
to the start of field values only, not in the middle,
and is case sensitive.

--- a/spot-client/src/common/css/page-layouts/spot-tv/_setup-view.scss
+++ b/spot-client/src/common/css/page-layouts/spot-tv/_setup-view.scss
@@ -17,6 +17,11 @@
     }
     
     .setup-roomList {
+        /**
+         * Define a set height to prevent the room list from causing the modal
+         * to resize frequently.
+         */
+        height: 300px;
         overflow: auto;
     }
     
@@ -29,6 +34,17 @@
         font-size: $font-size-medium-plus;
         margin-bottom: 34px;
         text-align: center;
+    }
+}
+
+.room-selection {
+    background-color: var(--container-content-bg-color);
+    cursor: pointer;
+    margin: 10px 0;
+    padding: 10px;
+
+    &:hover {
+        background-color: var(--container-content-bg-color-no-opacity);
     }
 }
 
